* Add feature to return list of S3 Object Directories * Add feature to return object by key
